# price-oracle

./: Cargo.toml  build.sh  check.sh  deploy.sh
res/: price_oracle.wasm
src/: lib.rs  utils.rs
